--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <a href="https://www.linkedin.com/in/harshraj-singh-panwar-029a3823a/" class="btn"><i class="fab fa-linkedin"></i> LinkedIn</a>
     </div>
 
-    <div class="credit"> created by <span> Neha Prajapat, Krrish Verma & HarshRaj Singh Panwar</span> | all rights reserved! </div>
+    <div class="credit"> created by <span> Krrish Verma</span> | all rights reserved! </div>
 </section>
 
 
